// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`risingEdge instruction compiler > compiles the rising edge segment 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    40,
    2,
    0,
    74,
    65,
    0,
    32,
    0,
    54,
    2,
    0,
  ],
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": true,
    },
  },
  "memory": {},
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;

exports[`risingEdge instruction compiler > compiles the rising edge segment for float operands 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    42,
    2,
    0,
    94,
    65,
    0,
    32,
    0,
    56,
    2,
    0,
  ],
  "locals": {
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": false,
    },
  },
  "memory": {},
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;
